# bertram2

./: .gitignore  CODEBASE_MAP.md  NEXT_STEPS.md  README.md  env.example  launcher.py  main.py  pyproject.toml  requirements.txt  run.sh  run.sh.2
config/: vllm_server.yaml
scripts/: compare_demo_logs.sh  start_vllm_server.sh
src/green_agent/: __init__.py  agent.py  agent_card.toml  episode_runner.py  evaluation_rubric.json  evaluator.py  green_assessor.py  output_formatter.py  rubric.py  run.sh  task_list.txt
src/utils/: __init__.py  a2a_client.py  ground_truth_baseline.py  messaging.py  textworld_env.py  vllm_client.py
src/white_agent/: __init__.py  agent.py  agent_card.toml  agent_card_hardcoded.toml  agent_hardcoded.py  hardcoded_trajectories.py  run.sh
